# lairn

./: .gitignore  LICENSE  README.md  pyproject.toml
lairn/: common.py  config.py  context_mixin.py  learn_artifact.py  learn_log.py  nomy.py
lairn/curriculum/: curriculum_parser.py  generate_learning_examples.py  load.py  models.py  prompts.py  summarize_curriculum.py
lairn/integrations/sofatutor/: __init__.py  activity_list_parser.py  manual_crawler.py  manual_crawler_async.py
lairn/reporting/: week_summarizer.py
scripts/: generate_learning_examples.py  generate_multiple_choice_quizes.py  parse_curricula.py  process_nomy_reports.py  summarize_curriculum_pdfs.py  summarize_week.py  tmp_update_sofatutor_activities.py  update_sofatutor_activities.py
