[tool.poetry]

name = "lairn"
version = "0.1.0"
description = "Ai-assisted learning"
packages = [{ include = "lairn" }]
authors = ["Carlo Barth <carlo@huq.io>"]
readme = "README.md"

keywords = [
]
classifiers = [
    # TODO: update this list to match your application: https://pypi.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 1 - Planning",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]

python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
cachetools = "^5.3.3"
langchain = "^0.2.10"
tiktoken = "^0.7.0"
openai = "^1.36.0"
google-api-python-client = "^2.137.0"
click = "^8.1.7"
pypdf = "^4.3.0"
langchain-community = "^0.2.9"
langchain-openai = "^0.1.17"
langchain-core = "^0.2.22"
llama-index = "^0.10.56"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
scrapy = "^2.11.2"
unmarkd = "^1.1.3"
openpyxl = "^3.1.5"
aiohttp = "^3.10.3"
python-slugify = "^8.0.4"


[tool.poetry.group.dev.dependencies]

ipykernel = "^6.25.2"

# Testing
pytest = "^7.3"
pytest-describe = "^2.0"
pytest-expecter = "^3.0"
pytest-random = "*"
pytest-cov = "^4.1"
freezegun = "*"


[tool.black]
line-length = 110

[tool.isort]
profile = "black"


[tool.pytest.ini_options]

cache_dir = ".cache/pytest/"


[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
